fix(web): Fix fullscreen z-index

--- a/web/src/styles/Album.scss
+++ b/web/src/styles/Album.scss
@@ -41,7 +41,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        z-index: 1;
+        z-index: 2;
         top: 0;
         left: 0;
         width: 100vw;
